Add script to return the url that you asked for

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Tyler Calder</title>
+    </head>
+
+    <body>
+        <p id="demo">Hello World!</p>
+        <br>
+        <p>
+        <script>document.getElementById("demo").innerHTML =
+"Page location is " + window.location.href;
+        </script>
+        </p>
+    </body>
+</html>
